# NSU_OS_LABS

./: README.md
lab1/: README.md
lab1/task1/: commands.txt  hello  hello.c
lab1/task2/: commands.txt  hello  hello.c  hello_static.c  hello_static.h
lab1/task3/: commands.txt  hello  hello.c  hello_dynamic.h
lab1/task4/: CMakeLists.txt
lab1/task4/src/: main.c
lab2/: .gitignore  README.md
lab2/task1/: CMakeLists.txt  build.sh
lab2/task1/src/: main2.c  main3.c
lab2/task1/strace/: command.txt  index.html  wget_strace_output.txt
lab2/task2/: build.sh
lab2/task2/src/: main.s
lab2/task3/: notes.txt
lab2/task3/src/: main.c
lab3/task1/: CMakeLists.txt  create_dir.sh
lab3/task1/resourses/: help.txt
lab3/task1/src/: help.c  help.h  main.c  reverse.c  reverse.h  util.c  util.h
lab3/task2/: .gitignore  CMakeLists.txt  build.sh  create_links.sh
lab3/task2/resources/: help.txt
lab3/task2/src/: dir_funcs.c  dir_funcs.h  file_funcs.c  file_funcs.h  hard_link_funcs.c  hard_link_funcs.h  help.c  help.h  main.c  permission_funcs.c  permission_funcs.h  sym_link_funcs.c  sym_link_funcs.h  util.c  util.h
lab3/task3/src/: main.c
lab4/task1/: CMakeLists.txt  build.sh  notes.txt
lab4/task1/src/: main.c
lab4/task2/: CMakeLists.txt  notes.txt
lab4/task2/src/: main.c
lab4/task3/: CMakeLists.txt  build.sh
lab4/task3/src/: main.c
lab5/task1/: build.sh
lab5/task3/: CMakeLists.txt
lab6/task1/: CMakeLists.txt
lab6/task3/: CMakeLists.txt
lab6/task3/src/: client.c  server.c
lab7/task2/: CMakeLists.txt
lab7/task3/: CMakeLists.txt
(+21 files in other folders)
